--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--  @author 13
-      @qq交流群 796794009
-      @email 2449207463@qq.com
-      @link https://github.com/newbee-ltd -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -11,14 +7,13 @@
     <artifactId>newbee-mall</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>newbee-mall</name>
-    <description>NEWBEE商城</description>
-
-
+    <description>新蜂教育</description>
+      
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <properties>
@@ -72,9 +67,4 @@
             </plugin>
         </plugins>
     </build>
-    <!--  @author 13
-          @qq交流群 796794009
-          @email 2449207463@qq.com
-          @link https://github.com/newbee-ltd
-    -->
 </project>
